warehouse20/tautulli/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: warehouse20
  labels:
    app: tautulli
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 8181
      protocol: TCP
  selector:
    app: tautulli

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: warehouse20
  labels:
    app: tautulli
spec:
  serviceName: tautulli
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      automountServiceAccountToken: false
      containers:
        - name: tautulli
          image: "tautulli/tautulli:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8181
              name: http
          resources:
            requests:
              cpu: 200m
              memory: "256Mi"
            limits:
              cpu: 1000m
              memory: "1024Mi"
          volumeMounts:
            - mountPath: /config
              name: config
              subPath: data
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 300
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
      volumes:
        - name: config
          iscsi:
            iqn: iqn.2019-03.com.ntwk20:vault01.tautulli.cdab998267
            targetPortal: 172.20.1.5
            lun: 1
            chapAuthSession: true
            secretRef:
              name: vault01-chap-secret
